force-app/main/default/objects/ClaimDiagnosisProcedure__x/ClaimDiagnosisProcedure__x.object-meta.xml
<CustomObject>
    <externalDataSource>ClaimsDataSource</externalDataSource>
    <externalName>public$claimdiagnosisprocedure</externalName>
    <label>Claim Diagnosis Procedure</label>
    <pluralLabel>Claim Diagnosis Procedures</pluralLabel>
</CustomObject>