force-app/main/default/objects/ClaimDiagnosisProcedure__x/fields/ClaimDiagnosisId__c.field-meta.xml
<CustomField>
    <fullName>ClaimDiagnosisId__c</fullName>
    <externalDeveloperName>claimdiagnosis</externalDeveloperName>
    <inlineHelpText>ID of the claim diagnosis that this record is related to.</inlineHelpText>
    <label>Claim Diagnosis</label>
    <length>16</length>
    <referenceTo>ClaimDiagnosis__x</referenceTo>
    <relationshipLabel>Claim Diagnosis Procedures</relationshipLabel>
    <relationshipName>Claim_Diagnosis_Procedures</relationshipName>
    <type>ExternalLookup</type>
</CustomField>