force-app/main/default/objects/ClaimDiagnosisProcedure__x/fields/ClaimProcedureId__c.field-meta.xml
<CustomField>
    <fullName>ClaimProcedureId__c</fullName>
    <externalDeveloperName>claimprocedure</externalDeveloperName>
    <inlineHelpText>ID of the claim procedure that this record is related to.</inlineHelpText>
    <label>Claim Procedure</label>
    <length>16</length>
    <referenceTo>ClaimLine__x</referenceTo>
    <relationshipLabel>Claim Diagnosis Procedures</relationshipLabel>
    <relationshipName>Claim_Diagnosis_Procedures</relationshipName>
    <type>ExternalLookup</type>
</CustomField>