force-app/main/default/objects/ClaimDiagnosisProcedure__x/fields/SequenceNumber__c.field-meta.xml
<CustomField>
    <fullName>SequenceNumber__c</fullName>
    <externalDeveloperName>sequencenumber</externalDeveloperName>
    <inlineHelpText>Diagnosis sequence for the claim line item indicating whether diagnosis is primary, secondary, tertiary, and so on.</inlineHelpText>
    <label>Sequence Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>